; ModuleID = '/home/carl/AnghaBench/vlc/modules/codec/omxil/extr_utils.c_WaitForSpecificOmxEvent.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/codec/omxil/extr_utils.c_WaitForSpecificOmxEvent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OMX_ErrorNone = common dso_local global i64 0, align 8
@OMX_ErrorTimeout = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @WaitForSpecificOmxEvent(i32* %0, i64 %1, i32* %2, i32* %3, i32* %4) #0 {
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  store i32* %0, i32** %7, align 8
  store i64 %1, i64* %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  %15 = call i64 (...) @vlc_tick_now()
  store i64 %15, i64* %14, align 8
  br label %16

16:                                               ; preds = %5, %40
  %17 = load i32*, i32** %7, align 8
  %18 = load i32*, i32** %9, align 8
  %19 = load i32*, i32** %10, align 8
  %20 = load i32*, i32** %11, align 8
  %21 = call i64 @WaitForOmxEvent(i32* %17, i64* %13, i32* %18, i32* %19, i32* %20)
  store i64 %21, i64* %12, align 8
  %22 = load i64, i64* %12, align 8
  %23 = load i64, i64* @OMX_ErrorNone, align 8
  %24 = icmp ne i64 %22, %23
  br i1 %24, label %25, label %27

25:                                               ; preds = %16
  %26 = load i64, i64* %12, align 8
  store i64 %26, i64* %6, align 8
  br label %43

27:                                               ; preds = %16
  %28 = load i64, i64* %13, align 8
  %29 = load i64, i64* %8, align 8
  %30 = icmp eq i64 %28, %29
  br i1 %30, label %31, label %32

31:                                               ; preds = %27
  br label %41

32:                                               ; preds = %27
  %33 = call i64 (...) @vlc_tick_now()
  %34 = load i64, i64* %14, align 8
  %35 = sub nsw i64 %33, %34
  %36 = call i64 @VLC_TICK_FROM_SEC(i32 1)
  %37 = icmp sgt i64 %35, %36
  br i1 %37, label %38, label %40

38:                                               ; preds = %32
  %39 = load i64, i64* @OMX_ErrorTimeout, align 8
  store i64 %39, i64* %6, align 8
  br label %43

40:                                               ; preds = %32
  br label %16

41:                                               ; preds = %31
  %42 = load i64, i64* @OMX_ErrorNone, align 8
  store i64 %42, i64* %6, align 8
  br label %43

43:                                               ; preds = %41, %38, %25
  %44 = load i64, i64* %6, align 8
  ret i64 %44
}

declare dso_local i64 @vlc_tick_now(...) #1

declare dso_local i64 @WaitForOmxEvent(i32*, i64*, i32*, i32*, i32*) #1

declare dso_local i64 @VLC_TICK_FROM_SEC(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
